Make LanguageLoadingProvider static